# platform

./: .env.template  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile.api  Dockerfile.web  GUIDE.md  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  main.py  package.json  pyproject.toml  shared.py  shared.pyi  test_dual_auth.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: cd.yml  check.yml  lint-and-typecheck.yml  pytest.yml  static-analysis.yml
.husky/: pre-commit  pre-push
alembic/: env.py
alembic/versions/: 86f53887ffdc_add_refresh_tokens_table.py  a1b2c3d4e5f6_add_leetcode_link_and_solve_tables.py  bba7ee211888_add_sessions_table_and_category_to_.py  d2ba7436c1b7_initial_schema.py
migrations/: add_category_to_products.sql
modules/auth/: api.py  decoraters.py  models.py
modules/bot/: api.py  models.py
modules/bot/discord_modules/: bot.py
modules/bot/discord_modules/cogs/: GameCog.py  HelperCog.py  LeetCodeCog.py  UI.py
modules/bot/discord_modules/cogs/jeopardy/: Jeopardy.py  JeopardyQuestion.py  QuestionPost.py  Team.py
modules/bot/discord_modules/utils/: leetcode.py
modules/calendar/: api.py  clients.py  errors.py  models.py  service.py  utils.py
modules/marketing/: api.py  database.py  editable_link.py  events.py  get_events.py  message.py  models.py  selenium.py  template.py
modules/ocp/: api.py  models.py  notion_sync_service.py  service.py
modules/organizations/: README.md  api.py  config.py  models.py
modules/points/: api.py  models.py
modules/public/: api.py
modules/storefront/: README.md  api.py  models.py
modules/superadmin/: api.py
modules/users/: api.py  user_reader.py
modules/utils/: TokenManager.py  app.py  base.py  clerk_auth.py  config.py  db.py  logging_config.py  notion.py  types.py
scripts/: simple_db_viewer.py  test_api_endpoints.py  visualize_db.py
tests/: README.md  conftest.py  test_api_endpoints.py  test_frontend_fixes.py  test_purchase_webhook.py  test_storefront_api.py  test_storefront_points.py
utils/: clerk_auth.py
web/: package-lock.json  package.json  pnpm-lock.yaml
web/src/: App.js  config.js
web/src/components/: ErrorBoundary.js  SetupButton.js  SideBar.js  editProductModal.js
web/src/components/auth/: AuthContext.js
web/src/components/points/: api.js
web/src/components/shared/: OrganizationNavbar.jsx
web/src/components/utils/: axios.js
web/src/constants/: productCategories.js
web/src/hooks/: useOrgNavigation.js
web/src/pages/: ActiveGame.js  AddPoints.js  AddStorefrontProductPage.js  BotControlPanel.js  GamePanel.js  HomePage.js  Jeopardy.js  LeaderBoard.js  LoginPage.js  MemberStorePage.js  OCPDetails.js  OCPOfficerDetails.js  StorefrontDashboard.js  StorefrontListPage.js  SuperAdmin.js  TokenRetrival.js  TransactionsPage.js
