[project]
name = "soda-platform"
version = "0.1.0"
description = "SoDA Platform"
authors = [{name = "SoDA", email = "asu@thesoda.io"}]
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiohttp>=3.13.3",
    "aiosignal==1.4.0",
    "asgiref==3.11.1",
    "async-timeout==5.0.1",
    "attrs==25.4.0",
    "bidict==0.23.1",
    "blinker==1.9.0",
    "cachetools==7.0.0",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "colorama==0.4.6",
    "dnspython==2.8.0",
    "flask==3.1.2",
    "flask-cors==6.0.2",
    "flask-discord==0.1.69",
    "flask-socketio==5.6.0",
    "flask-sqlalchemy==3.1.1",
    "frozenlist==1.8.0",
    "greenlet==3.3.1",
    "h11==0.16.0",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "multidict>=6.3.2",
    "nest-asyncio==1.6.0",
    "oauthlib==3.3.1",
    "py-cord>=2.6.1",
    "pyjwt>=2.9.0",
    "pymongo==4.16.0",
    "psycopg2-binary>=2.9.10",
    "python-engineio==4.13.1",
    "python-socketio==5.16.1",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "simple-websocket==1.1.0",
    "sqlalchemy==2.0.46",
    "typing-extensions>=4.13.1",
    "urllib3==2.6.3",
    "werkzeug==3.1.5",
    "wsproto==1.3.2",
    "yarl>=1.18.3",
    "zipp==3.23.0",
    "python-dotenv>=1.1.0",
    "google-auth>=2.38.0",
    "google-api-python-client>=2.166.0",
    "selenium>=4.31.0",
    "gspread>=6.2.0",
    "oauth2client>=4.1.3",
    "webdriver-manager==4.0.2",
    "cryptography>=44.0.2",
    "gunicorn==25.0.3",
    "notion-client>=2.3.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-core>=2.11.0",
    "sentry-sdk[flask]>=2.35.0",
    "pytz>=2025.2",
    "python-dateutil>=2.9.0.post0",
    "google-genai>=1.14.0",
    "dateparser>=1.2.1",
    "google-generativeai>=0.8.5",
    "tzdata>=2025.2",
    "timefhuman>=0.0.5",
    "colorlog>=6.9.0",
    "tenacity>=9.1.2",
    "pycord>=0.1.1",
    "anthropic>=0.64.0",
    "openai>=1.102.0",
    "clerk-backend-api>=4.2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--verbose"

[tool.hatch.build.targets.wheel]
packages = ["modules"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.8.7",
    "ty>=0.0.14",
    "bandit>=1.7.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
