[project]
name = "soda-platform"
version = "0.1.0"
description = "SoDA Platform"
authors = [{name = "SoDA", email = "asu@thesoda.io"}]
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiohttp>=3.13.5",
    "aiosignal==1.4.0",
    "asgiref==3.11.1",
    "async-timeout==5.0.1",
    "attrs==26.1.0",
    "bidict==0.23.1",
    "blinker==1.9.0",
    "cachetools==7.0.6",
    "certifi==2026.4.22",
    "charset-normalizer==3.4.7",
    "click==8.3.3",
    "colorama==0.4.6",
    "dnspython==2.8.0",
    "flask==3.1.3",
    "flask-cors==6.0.2",
    "flask-discord==0.1.69",
    "flask-socketio==5.6.1",
    "flask-sqlalchemy==3.1.1",
    "frozenlist==1.8.0",
    "greenlet==3.5.0",
    "h11==0.16.0",
    "idna==3.13",
    "importlib-metadata==9.0.0",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "markupsafe==3.0.3",
    "multidict>=6.3.2",
    "nest-asyncio==1.6.0",
    "oauthlib==3.3.1",
    "py-cord>=2.7.2",
    "pyjwt>=2.12.1",
    "pymongo==4.17.0",
    "psycopg2-binary>=2.9.12",
    "python-engineio==4.13.1",
    "python-socketio==5.16.1",
    "requests==2.33.1",
    "requests-oauthlib==2.0.0",
    "simple-websocket==1.1.0",
    "sqlalchemy==2.0.49",
    "typing-extensions>=4.13.1",
    "urllib3==2.6.3",
    "werkzeug==3.1.8",
    "wsproto==1.3.2",
    "yarl>=1.23.0",
    "zipp==3.23.1",
    "python-dotenv>=1.2.2",
    "google-auth>=2.49.2",
    "google-api-python-client>=2.194.0",
    "selenium>=4.43.0",
    "gspread>=6.2.0",
    "oauth2client>=4.1.3",
    "webdriver-manager==4.0.2",
    "cryptography>=44.0.2",
    "gunicorn==25.3.0",
    "notion-client>=3.0.0",
    "google-auth-oauthlib>=1.3.1",
    "google-api-core>=2.30.3",
    "sentry-sdk[flask]>=2.58.0",
    "pytz>=2026.1.post1",
    "python-dateutil>=2.9.0.post0",
    "google-genai>=1.73.1",
    "dateparser>=1.4.0",
    "google-generativeai>=0.8.5",
    "tzdata>=2026.2",
    "timefhuman>=0.0.5",
    "colorlog>=6.9.0",
    "tenacity>=9.1.4",
    "pycord>=0.1.1",
    "anthropic>=0.97.0",
    "openai>=2.32.0",
    "clerk-backend-api>=5.0.6",
    "alembic>=1.18.4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"
addopts = "--verbose"

[tool.hatch.build.targets.wheel]
packages = ["modules"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.15.12",
    "ty>=0.0.32",
    "bandit>=1.9.4",
    "pre-commit>=4.6.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.bandit]
exclude_dirs = ["tests", "web", "node_modules", ".venv"]
